# N-body-problem

./: .gitignore  Body.hpp  CMakeLists.txt  README.md  System.cpp  System.hpp  Vector2D.cpp  Vector2D.hpp  bodies.txt  initial-conditions.csv
include/: Body.hpp  Recorder.hpp  Simulation.hpp  Vector2D.hpp
include/Integrator/: EulerIntegrator.hpp  Integrator.hpp  VerletIntegrator.hpp
src/: Body.cpp  Recorder.cpp  Simulation.cpp  Vector2D.cpp  main.cpp
